scrollbar on hero fixed

--- a/src/styles/RootLayout.css
+++ b/src/styles/RootLayout.css
@@ -11,4 +11,10 @@
 .main {
   overflow-y: auto;
   padding-block: 2rem;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.main::-webkit-scrollbar {
+  display: none;
 }
